# api/openapi.yaml
@@ -67,6 +67,8 @@ paths:
     $ref: ./modules/identity.yaml#/paths/~1v1~1auth~1logout
   /v1/me:
     $ref: ./modules/identity.yaml#/paths/~1v1~1me
+  /v1/scenario-definitions:
+    $ref: ./modules/preparation.yaml#/paths/~1v1~1scenario-definitions
   /v1/scenario-definitions/{scenario_definition_id}:
     $ref: ./modules/preparation.yaml#/paths/~1v1~1scenario-definitions~1{scenario_definition_id}
   /v1/scenario-definitions/{scenario_definition_id}/role-definitions:
@@ -154,6 +156,8 @@ components:
       $ref: ./modules/identity.yaml#/components/schemas/LoginResponse
     ScenarioDefinition:
       $ref: ./modules/preparation.yaml#/components/schemas/ScenarioDefinition
+    ScenarioDefinitionList:
+      $ref: ./modules/preparation.yaml#/components/schemas/ScenarioDefinitionList
     ScenarioConfig:
       $ref: ./modules/preparation.yaml#/components/schemas/ScenarioConfig
     InterviewScenarioConfig:
